<resources>
    <string name="app_name">Lista de Frutas</string>
    <string name="fruit_image">Imagem da fruta</string>
    <string name="add_button">Adicionar fruta</string>
    <string name="add_image">Adicionar uma imagem</string>
    <string name="fruit_description">Descrição da fruta</string>
    <string name="fruit_name">Nome da fruta</string>
    <string name="add_fruit">Adicionar Fruta</string>
    <string name="delete_fruit">Apagar fruta</string>
    <string name="action_filter">Filtrar frutas</string>
    <string name="ok">Ok</string>
    <string name="filter_fruits">Filtrar frutas</string>
    <string name="filter_fruits_same_name">Frutas com o mesmo nome</string>
    <string name="filter_alphabetical_order">Ordem alfabética</string>
    <string name="filter_insertion_order">Ordem por inserção</string>
    <string name="cancel">Cancelar</string>
</resources>